@@ -1,6 +1,8 @@
 package mate.academy.spring.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import javax.validation.Valid;
 import mate.academy.spring.dto.request.MovieRequestDto;
 import mate.academy.spring.dto.response.MovieResponseDto;
 import mate.academy.spring.model.Movie;
@@ -21,24 +23,24 @@ public class MovieController {
     private final ResponseDtoMapper<MovieResponseDto, Movie> movieResponseDtoMapper;
 
     public MovieController(MovieService movieService,
-            RequestDtoMapper<MovieRequestDto, Movie> movieRequestDtoMapper,
-            ResponseDtoMapper<MovieResponseDto, Movie> movieResponseDtoMapper) {
+                           RequestDtoMapper<MovieRequestDto, Movie> movieRequestDtoMapper,
+                           ResponseDtoMapper<MovieResponseDto, Movie> movieResponseDtoMapper) {
         this.movieService = movieService;
         this.movieRequestDtoMapper = movieRequestDtoMapper;
         this.movieResponseDtoMapper = movieResponseDtoMapper;
     }
 
     @PostMapping
-    public MovieResponseDto add(@RequestBody MovieRequestDto requestDto) {
+        public MovieResponseDto add(@RequestBody @Valid MovieRequestDto requestDto) {
         Movie movie = movieService.add(movieRequestDtoMapper.mapToModel(requestDto));
         return movieResponseDtoMapper.mapToDto(movie);
     }
 
     @GetMapping
-    public List<MovieResponseDto> getAll() {
+        public List<MovieResponseDto> getAll() {
         return movieService.getAll()
-                .stream()
-                .map(movieResponseDtoMapper::mapToDto)
-                .toList();
+                    .stream()
+                    .map(movieResponseDtoMapper::mapToDto)
+                    .collect(Collectors.toList());
     }
 }
